# squarePractice

./: CMakeLists.txt  Figure.cpp  Figure.h  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  triangle.cpp  triangle.h
