cmake_minimum_required(VERSION 3.28)
project(29June_Lesson_Pracice)

set(CMAKE_CXX_STANDARD 17)

add_executable(29June_Lesson_Pracice main.cpp
        Figure.h
        circle.h
        circle.cpp
        Figure.cpp
        rectangle.h
        rectangle.cpp
        triangle.h
        triangle.cpp
        square.h
        square.cpp)
